480 ==> 147770 - Use a hierarchical treeview in HTMLExport (instead of a listview).
481 ==> 259748 - Xorg crashes when launching the "Export to flickr" tool.
482 ==> 398206 - Strongly underexposed areas of the jpeg file are white rather than pure black.
483 ==> 127498 - Reduce image size delete exif data.
484 ==> 219009 - Crashed when selecting photos for upload.
485 ==> 234395 - Unable to get list of albums.
486 ==> 241587 - Flickr export reencode jpeg before sending them.
487 ==> 278890 - Showfoto crashes with qt 4.8.
488 ==> 355744 - Segfault on SmugMug upload.
489 ==> 358704 - Request authorization does not occur and upload becomes impossible.
490 ==> 175233 - Showfoto crashes on windows.
491 ==> 259623 - Application: showFoto (showfoto), signal: Segmentation fault (opening jpg).
492 ==> 194832 - Showfoto open and crash after one second.
493 ==> 390287 - digiKam crashes when I do batch renames.
494 ==> 390290 - Trying to use "red eyes" reduction function make showfoto crash.
495 ==> 388542 - DNG crash when i open a .nef files.
496 ==> 390580 - First crashes when saving tiff file, then crashes when starting.
497 ==> 391721 - No photography is displayed in the main view.
498 ==> 392813 - Showfoto crashed when clicked on close button in title bar.
499 ==> 393069 - I do not see images in the file browser, only in calendar.
500 ==> 392189 - Database upgrade fails.
501 ==> 386653 - Message error on face detectior.
502 ==> 398287 - Print creator causes digiKam crash when orientation is changed.
503 ==> 397305 - Failed to add tag to database.
504 ==> 398462 - IPTC from Ligthroom.
505 ==> 397340 - Update image file timestamps if metadata is written to sidecar file [patch].
506 ==> 398331 - xmp sidecar files are not reloaded on change.
507 ==> 380341 - Modified sidecar not rescanned.
508 ==> 339342 - SCAN : Search for new items does not recognize modified tags in sidecar files.
509 ==> 